# docs/swagger.yaml
@@ -46,30 +46,6 @@ definitions:
         type: string
     type: object
   controller.ReqPasien:
-    properties:
-      alamat:
-        example: Sariasih 25, Bandung
-        type: string
-      diagnosis:
-        example: Stroke
-        type: string
-      doctor:
-        example: Ardi
-        type: string
-      gender:
-        example: Perempuan
-        type: string
-      pasienName:
-        example: Doni
-        type: string
-      phonenumber:
-        example: "08567432"
-        type: string
-      status:
-        example: single
-        type: string
-      ttl:
-        type: string
     type: object
 host: ws-rumahsakit-2e1eb71f14e2.herokuapp.com
 info:
